--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body
 {
     background-color:#393e46 ;
     font-family: 'Bebas Neue';
-    padding: 0;
-    margin: 0;
+    padding: 0rem;
+    margin: 0rem;
 }
 
 .navigation
