--- a/style.css
+++ b/style.css
@@ -8,14 +8,15 @@ body
     font-family: 'Bebas Neue';
     padding: 0rem;
     margin: 0rem;
+    max-width: 25rem;
 }
 
 .navigation
 {
     background-color:#222831 ;
     color: white;
-    padding:0.5%;
-    
+    padding:0.5rem;
+    max-width: 25rem;
 }
 
 .link
@@ -52,12 +53,12 @@ body
     max-width: 25%;
     height: auto;
     position: relative;
-    border-bottom-left-radius: 2rem;
-    border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem;
-    border-bottom-right-radius: 2rem;
+    border-bottom-left-radius: 0.2rem;
+    border-top-left-radius: 0.2rem;
+    border-top-right-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
     margin: auto;
-    left: 1rem;
+    left: 0.3rem;
     top: 1rem;
 }
 
@@ -66,8 +67,8 @@ body
     font-family: 'Montserrat';
     color: white;
     position: absolute;
-    left:28%;
-    top:30%;
+    left:6.3rem;
+    top:6rem;
 }
 
 .about
@@ -75,8 +76,8 @@ body
     font-family: 'Montserrat';
     color: white;
     position: absolute;
-    left: 28%;
-    top: 45%;
+    left: 6.4rem;
+    top: 10rem;
 }
 
 .bca
@@ -93,8 +94,8 @@ body
     color: #f96d00;
     letter-spacing: 0.07rem;
     position: absolute;
-    left: 28%;
-    top: 78%;
+    left: 6.3rem;
+    top: 24rem;
 }
 .tech
 {
@@ -102,7 +103,7 @@ body
     letter-spacing: 0.07rem;
      position: absolute;
     text-align: center;
-    top: 95%;
+    top: 30rem;
     
 }
 
@@ -119,7 +120,7 @@ body
     background-color: #f96d00;
     letter-spacing: 0.07rem;
     position: relative;
-    top:35rem;
+    top:58rem;
     
 }
 
@@ -166,7 +167,7 @@ body
   gap: 50px;
   background-color: #393e46;
   padding: 100px;
-  width: 50rem;
+  width: 10rem;
 }
 
 .grid-container > div {
@@ -181,9 +182,14 @@ body
     border-bottom-right-radius: 1rem;
 }
 
-.tag-note
-{
-    
-}
+@media screen and (min-width: 360px) {
+    .about {
+    /* display: flex; */
+    }
+    .box_1 {
+    background-color: dodgerblue;
+    color: white;
+    }
+    }
 
 
