--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body
     font-family: 'Bebas Neue';
     padding: 0rem;
     margin: 0rem;
-    max-width: 25rem;
+    max-width:720px;
+    max-height: 1080px;
 }
 
 .navigation
@@ -16,7 +17,7 @@ body
     background-color:#222831 ;
     color: white;
     padding:0.5rem;
-    max-width: 44rem;
+    max-width: 720px;
 }
 
 .link
@@ -67,7 +68,7 @@ body
     font-family: 'Montserrat';
     color: white;
     position: absolute;
-    left:6.3rem;
+    left:13rem;
     top:6rem;
 }
 
@@ -76,7 +77,7 @@ body
     font-family: 'Montserrat';
     color: white;
     position: absolute;
-    left: 6.4rem;
+    left: 13.5rem;
     top: 10rem;
 }
 
@@ -94,7 +95,7 @@ body
     color: #f96d00;
     letter-spacing: 0.07rem;
     position: absolute;
-    left: 6.3rem;
+    left: 13.5rem;
     top: 17rem;
 }
 .tech
@@ -120,7 +121,7 @@ body
     background-color: #f96d00;
     letter-spacing: 0.07rem;
     position: relative;
-    top:48rem;
+    top:42rem;
     
 }
 
@@ -148,7 +149,7 @@ body
 
 .background
 {
-    width: 44rem;
+    width: 720px;
     /* max-height: 100rem; */
     position: absolute;
     opacity: 0.1;
